changed scroll button to scroll smoothly and changed position in css to stop overlap with footer

--- a/src/App.css
+++ b/src/App.css
@@ -172,12 +172,13 @@ footer {
 }
 
 #scroll-to-top {
-  position: fixed;
+  position: sticky;
   z-index: 100;
   background-color: rgba(0, 0, 0, 0.3);
-  bottom: 10rem;
-  right: 6rem;
-  width: 7rem;
-  border-radius: 30%;
-  padding: 2rem;
+  bottom: 4rem;
+  margin-bottom: 2rem;
+  left: 90%;
+  width: 15rem;
+  border-radius: 20%;
+  padding: 1.5rem;
 }
